--- a/README.mdx
+++ b/README.mdx
@@ -8,7 +8,7 @@ It was very easy to get started. The homepage is very TTS-heavy given it's the S
 
 I also would have liked a realtime demo on the Agents page. Voice agents are a significant part of the business, and latency is a key differentiator. Let devs experience Line/the latency first hand so they’re comfortable investing into it and rolling it out to their customers.
 
-Pricing was initially overwhelming, but once I focused on my use case (I was pretending to be a dev building healthcare agents) it made sense. The mismatch between concurrency for TTS and Agents was the only thing that seemed off. I understand why TTS concurrency is lower (GPU capacity planning), but as a dev, I can’t utilize additional agents without TTS.
+Pricing was initially overwhelming, but once I focused on my use case (I was pretending to be a dev building healthcare agents) it made sense. The mismatch between concurrency for TTS vs. Line was the only thing that seemed off. I understand why TTS concurrency is lower (GPU capacity planning), but as a dev, I can’t utilize additional agents without TTS.
 
 The `Getting Started`/`Models` docs are excellent. My only complaint is there was only a passing mention of the other available TTS endpoints and Bytes data types. For developers who want to use the WebSocket endpoint, which I imagine is a large percentage, there should be some mention in `Getting Started` or `SDKs`.
 
