--- a/README.mdx
+++ b/README.mdx
@@ -133,7 +133,7 @@ I'm now looking at what I hope to integrate. I see the text: "Line is a code-fir
 
 It's unclear what "Line" is: both the word and its usage, as well as "code-first ecosystem." Since I clicked Agents, I'm assuming Line is an agent builder.
 
-<span style="font-size: 0.95em; color: #888;"><em>Idea: Rework this slightly to something like "Line is a code-first agent builder to rapidly prototype and deploy flexible voice agents for any use case."</em></span>
+<span style="font-size: 0.95em; color: #888;"><em>Idea: Rework this slightly to something like "Line is a code-first agent builder to rapidly prototype and deploy production-ready voice agents for any use case."</em></span>
 
 ![Line Start Anywhere](/Public/line-start-anywhere.png)
 
