--- a/README.mdx
+++ b/README.mdx
@@ -1,8 +1,8 @@
-**I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences + clean up formatting.**
+**I wrote 100% of this myself as a first draft. I then used AI to proofread and shorten some of my sentences + clean up formatting. This ended up taking ~5 hrs with the detailed notes**
 
-(I will include detailed notes below the 3 parts)
+(I will include detailed first impressions/thoughts below the 3 parts).
 
-## Part 1: (20 min)
+## Part 1: Playground Audit
 
 It was very easy to get started. The homepage is very TTS-heavy given it's the Sonic page. There wasn't anything on the page indicating that STT or Agents are available, so I had to go into the top navigation bar.
 
@@ -47,7 +47,7 @@ There was friction there.
 - **Rework/merge redundant playground voice pages to reduce cognitive load of side navigation bar.**  
   (Requires coordination and UI rework, bigger initiative.)
 
-## Part 2: (30 min)
+## Part 2: Dashboarding
 
 - **MKT, Weekly:** Website visits, broken down by UTM parameter. Useful for monitoring traffic sources and which channels are working.
 - **MKT, Weekly:** Page visits/Website Actions -> Sign Up – gives insight into website touchpoints that resonate most. Pages, demos, etc.
@@ -78,7 +78,7 @@ Evangelizing the culture comes in two ways:
 
 For example, for the emotion tagging feature, the product manager and engineers should know why it’s being built (use cases that require expressive voices + increase adoption), and once released, where to view adoption and retention metrics. After a week, add a short slide to all-hands showing before/after and adoption numbers to tie real business value to the change.
 
-## Part 3: (30 min)
+## Part 3: Experiment Design & Prioritization
 
 My two experiment candidates, prioritized:
 
