--- a/README.mdx
+++ b/README.mdx
@@ -4,17 +4,20 @@
 
 ## Part 1: Playground Audit
 
+### Website
 It was very easy to get started. The homepage is very TTS-heavy given it's the Sonic page. There wasn't anything on the page indicating that STT or Agents are available, so I had to go into the top navigation bar.
 
 I was expecting a realtime demo on the Agents page. I assume voice agents are a priority for the business and latency is a key differentiator. We should let devs experience Line/the latency first hand so they feel comfortable investing into it and rolling it out to their customers.
 
+### Pricing
 Pricing was initially overwhelming, but once I focused on my use case (I was assuming the role of a dev building healthcare agents) it made sense. The mismatch between concurrency for TTS vs. Line was the only thing that seemed off. I understand why TTS concurrency is lower (GPU capacity planning), but as a dev, I can’t utilize additional agents without TTS.
 
+### TTS Docs
 The `Getting Started`/`Models` docs are excellent. My only complaint is there was only a passing mention of the other available TTS endpoints and Bytes data types. For developers who want to use the WebSocket endpoint, which I imagine is a large percentage, there should be some mention in `Getting Started` or `SDKs`.
 
-I also found what appears to be a bug with the mp3 Bytes call. Depending on Sample Rate, the audio playback speed is altered.
+I also found what appears to be a bug with the mp3 `Bytes` call. WAVs produced expecte behavior, but depending on Sample Rate, the mp3 audio playback speed is altered.
 
-16k is fast and high pitched, 48k is slow and low pitched. The only one that worked is 44.1k.
+16k is fast and high pitched, 48k is slow and low pitched. 44.1k works as expected.
 
 ```
 curl -N -X POST "https://api.cartesia.ai/tts/bytes" \
@@ -33,52 +36,36 @@ curl -N -X POST "https://api.cartesia.ai/tts/bytes" \
                 {
                     "container":"mp3",
                     "bit_rate":64000,
-                    "sample_rate":44100
+                    "sample_rate":44100 //16k or 48k produce clips below
                 }
             }' > howdy_sample.mp3
 ```
 
-[//]: # (Snippets begin)
-
 #### Example Audio Snippets
 
-<audio controls>
-  <source src="./Snippets/16k.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
+- **16k audio snippet:** [16k.mp3](./Snippets/16k.mp3)
+- **48k audio snippet:** [48k.mp3](./Snippets/48k.mp3)
+- **441k audio snippet:** [441k.mp3](./Snippets/441k.mp3)
 
-**16k.mp3**
+### Agents Docs
+The `Agents` docs are very comprehensive. The number of first-class concepts is broad, so a diagram would help build understanding of the interplay more quickly.
 
-<audio controls>
-  <source src="./Snippets/48k.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
+I didn't see a way to bring my own phone number from Twilio or update prompts/transfer to a human. Even selecting my own Cartesia-provided phone number based on my region would be fine.
 
-**48k.mp3**
+### TTS Playground
+The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different example prompts without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
 
-<audio controls>
-  <source src="./Snippets/441k.mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-</audio>
+[example-prompts.mp4](./Public/example-prompts.mp4)
 
-**441k.mp3**
+There are eight different pages for voice in the playground, but this could be condensed to 3–4.
 
-[//]: # (Snippets end)
-
-
- The `Agents` docs are very comprehensive. The number of first-class concepts is broad, so a diagram would help build understanding of the interplay more quickly.
-
-I didn't see a way to bring my own phone number from Twilio or update prompts/transfer to a human. If Line is going to stay low-level, those are opportunities. I suspect I could solve them (maybe) with custom Python.
-
-The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different ones without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
-
-I liked the pronunciation and cloning options, but everything felt scattered. There are eight different pages for voice in the playground, but I imagine this could be condensed to 3–4.
-
+#### Redundancy
 1. `Narration` is very similar to `Text to Speech`. Adding an option to save generations would make them functionally identical.
 2. `Voices` is identical to the *Voices* menu in `Text to Speech`.
 3. The two different cloning pages can be consolidated.
 4. `Localization` and `Voice Changer` can become a `Voice Studio` page.
 
+### Line Playground
 The Agents page is where I ran into some headaches. `Text-to-agent` is underwhelming. There’s no option to add tool calling, and the single-prompt agent isn’t very useful to most business cases (at least without tool calling).
 
 Additionally, getting started with Agents is a significant investment. Initially, I saw an option to `Connect Your Code` which asked for a GitHub repo. Not having one, I had to connect my Github or copy a template.
@@ -232,7 +219,7 @@ I then return to the Sign Up page, which strongly emphasizes Sonic 3.
 ## Docs
 The Docs are very strong. Going through sequentially via the bottom nav was nice.
 
-Generating a snippet via cURL/Python/JS makes sense, though since I'm looking to create a voice agent, doing a bytes call, which seems more suited for batch calls, isn’t super relevant.
+Generating a snippet via cURL/Python/JS makes sense, though since I'm looking to create a voice agent, doing a `Bytes` call, which seems more suited for batch calls, isn’t super relevant.
 
 I got it working very easily and the token-based auth is clear.
 
@@ -285,6 +272,8 @@ This is useful, as I'm learning to use the tool and trying different examples, b
 ![Emote Sonic 2](/Public/emote-sonic-2.png)
 
 Looking at the "Controls", I see multiple models. It defaults to Sonic 3. I was compelled to try different models, and when swapping models from Sonic 3 to Sonic 2 *after* clicking an example prompt, the emotion and emote tags remain—which is odd, since they don't work with Sonic 2. The model spoke the emote "Laughter" for Sonic 2.
+
+<example-prompts.mp4>
 
 <span style="font-size: 0.95em; color: #888;"><em>Idea: When I change models, remove the emotion tags, or at least have the TTS model ignore them if incompatible and provide a warning: "model not compatible with emotion tags."</em></span>
 
@@ -358,3 +347,5 @@ Then, the templates available are of mixed value. The Basic Chat was fine but ba
 <span style="font-size: 0.95em; color: #888;"><em>Idea: I didn’t see any transfer logic or ability to update agent prompts.</em></span>
 
 The repo itself is clear. Good README, clean code. My only gripe is how much code there is—it’s very low level, which makes rapid testing harder. I can use Cursor to make edits, which solves most of that problem.
+
+
