--- a/README.mdx
+++ b/README.mdx
@@ -55,7 +55,7 @@ I didn't see a way to bring my own phone number from Twilio or update prompts/tr
 ### TTS Playground
 The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different example prompts without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
 
-[example-prompts.mp4](./Public/example-prompts.mp4)
+[![Example Prompts Video](https://img.youtube.com/vi/QavVoKRJLFw/0.jpg)](https://www.youtube.com/watch?v=QavVoKRJLFw)
 
 There are eight different pages for voice in the playground, but this could be condensed to 3–4.
 
@@ -273,7 +273,7 @@ This is useful, as I'm learning to use the tool and trying different examples, b
 
 Looking at the "Controls", I see multiple models. It defaults to Sonic 3. I was compelled to try different models, and when swapping models from Sonic 3 to Sonic 2 *after* clicking an example prompt, the emotion and emote tags remain—which is odd, since they don't work with Sonic 2. The model spoke the emote "Laughter" for Sonic 2.
 
-<example-prompts.mp4>
+[![Example Prompts Video](https://img.youtube.com/vi/QavVoKRJLFw/0.jpg)](https://www.youtube.com/watch?v=QavVoKRJLFw)
 
 <span style="font-size: 0.95em; color: #888;"><em>Idea: When I change models, remove the emotion tags, or at least have the TTS model ignore them if incompatible and provide a warning: "model not compatible with emotion tags."</em></span>
 
