--- a/Part-1.mdx
+++ b/Part-1.mdx
@@ -51,9 +51,11 @@ The `Agents` docs are very comprehensive. The number of first-class concepts is 
 I didn't see a way to bring my own phone number from Twilio or update prompts/transfer to a human. Even selecting my own Cartesia-provided phone number based on my region would be fine.
 
 ### TTS Playground
-The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different example prompts without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
+The playground was simple to use. I quickly generated a snippet and tried a handful of voices/words tailored to my use case. I ran into confusion with the example prompts. There was no simple way to try different example prompts without deleting the filled prompt, and if I select an example prompt and then change from Sonic 3 to Sonic 2, the TTS model will speak emotes like "Laughter". 
 
 [![Example Prompts Video](https://img.youtube.com/vi/QavVoKRJLFw/0.jpg)](https://www.youtube.com/watch?v=QavVoKRJLFw)
+
+Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs were identical, and I didn’t understand the voices sorting.
 
 There are eight different pages for voice in the playground, but this could be condensed to 3–4.
 
