--- a/Part-3.mdx
+++ b/Part-3.mdx
@@ -1,4 +1,4 @@
-**I didn't fully understand this section. I interpreted it as pick 2 experiments to run. They can be my idea, or I can pick from the last below. I chose 2 of my own, and I also talked a bit about drip campaigns since I've run those in the past.
+**I didn't fully understand this section. I interpreted it as pick 2 experiments to run. They can be my idea, or I can pick from the last below. I chose 2 of my own, and I also talked a bit about drip campaigns since I've run those in the past.**
 
 ## Part 3: Experiment Design & Prioritization
 
@@ -60,7 +60,7 @@ The campaign would work like this:
 
 4. Tracking: Add UTM parameters to all email links so you can track which emails drive signups, activations, and conversions. This helps you iterate on messaging and timing.
 
-This is mostly product/ops work - setting up the segmentation logic, writing email copy, configuring triggers in your email platform, and adding tracking. Could be done in 1-2 weeks with a PM and maybe a marketing/ops person. The technical lift is minimal if you already have an email platform integrated.
+This is mostly product/ops work: setting up the segmentation logic, writing email copy, configuring triggers in your email platform, and adding tracking. Could be done in 1-2 weeks with a PM and maybe a marketing/ops person. The technical lift is minimal if you already have an email platform integrated.
 
 **Metric:** Activations, resurrections (WAU), conversion to paid, email open rates and click-through rates.
 
