--- a/Part-2.mdx
+++ b/Part-2.mdx
@@ -1,5 +1,5 @@
 ## Part 2: Dashboarding
-MKT = Marketing, ACT = Activiation, RET = Retention, GEN = General
+MKT = Marketing, ACT = Activation, RET = Retention, GEN = General
 
 - **MKT, Weekly:** Page visits/Website Actions -> Sign Up – gives insight into website touchpoints that resonate most. Pages, demos, etc.
 - **ACT, Weekly:** Pageview -> Sign Ups -> Activations (generated 120 sec TTS snippets in dashboard or made API call) – general pulse on the top of funnel. Ideally, this steadily grows over time and most sign-ups activate.
