--- a/Part-3.mdx
+++ b/Part-3.mdx
@@ -1,4 +1,4 @@
-**I didn't fully understand this section. I interpreted it as pick 2 experiments to run. They can be my idea, or I can pick from the last below. I chose 2 of my own, and I also talked a bit about drip campaigns since I've run those in the past.**
+**I didn't fully understand the ask in this section. I interpreted it as pick 2 experiments to run. They can be my idea, or I can pick from the list below. I chose 2 of my own, and I also did drip campaigns since I've run those in the past.**
 
 ## Part 3: Experiment Design & Prioritization
 
