--- a/Part-2.mdx
+++ b/Part-2.mdx
@@ -18,9 +18,7 @@ MKT = Marketing, ACT = Activation, RET = Retention, GEN = General
 
 Metrics are reviewed **weekly** in cross-functional product/leadership sync and **monthly** in all-hands or business review meetings. Key product-level metrics surface in dashboards visible to all teams. Feature-level or experiment-specific metrics are highlighted in retrospectives or post-launch summaries.
 
-**How metrics guide future iterations:**
-
-Post-launch, these metrics directly inform prioritization, roadmap, and iteration focus (e.g., features with stalled adoption trigger reviews; outperforming features get upgrades and suggest new markets for GTM).
+Post-launch, these metrics directly inform prioritization, roadmap, and iteration focus (e.g., outages, shifting sentiments, features with stalled adoption trigger reviews; outperforming features get upgrades and suggest new markets for GTM).
 
 Evangelizing the culture comes in three ways:
 
