--- a/Part-1.mdx
+++ b/Part-1.mdx
@@ -13,7 +13,7 @@ Pricing was initially overwhelming, but once I focused on my use case (I was ass
 ### TTS Docs
 The `Getting Started`/`Models` docs are excellent. My only complaint is there was only a passing mention of the other available TTS endpoints and Bytes data types. For developers who want to use the WebSocket endpoint, which I imagine is a large percentage, there should be some mention in `Getting Started` or `SDKs`.
 
-I also found what appears to be a bug with the mp3 `Bytes` call. WAVs produced expecte behavior, but depending on Sample Rate, the mp3 audio playback speed is altered.
+I also found what appears to be a bug with the mp3 `Bytes` call. WAVs produced expected behavior, but depending on Sample Rate, the mp3 audio playback speed is altered.
 
 16k is fast and high pitched, 48k is slow and low pitched. 44.1k works as expected.
 
