--- a/Part-1.mdx
+++ b/Part-1.mdx
@@ -59,7 +59,7 @@ Also, after using a cloned voice, my "Cartesia Voices" and "All Voices" tabs wer
 
 There are eight different pages for voice in the playground, but this could be condensed to 3–4.
 
-#### Redundancy
+#### Voice Page Redundancy
 1. `Narration` is very similar to `Text to Speech`. Adding an option to save generations would make them functionally identical.
 2. `Voices` is identical to the *Voices* menu in `Text to Speech`.
 3. The two different cloning pages can be consolidated.
