--- a/Appendix-First-Impressions-Notes.mdx
+++ b/Appendix-First-Impressions-Notes.mdx
@@ -204,9 +204,8 @@ I connected my Github and was asked to link a repo. I didn't have one, so backed
 
 Then, the templates available are of mixed value. The Basic Chat was fine but basic. The Form Filler was very good and thorough.
 
-### Idea: I didn’t see any transfer logic or ability to update agent prompts.
 <span style="font-size: 0.95em; color: #888;"><em>Idea: I didn’t see any transfer logic or ability to update agent prompts.</em></span>
 
-The repo itself is clear. Good README, clean code. My only gripe is how much code there is—it’s very low level, which makes rapid testing harder. I can use Cursor to make edits, which solves most of that problem.
+The repo itself is clear. Good README, clean code. It's very low level, which is great for productionizing but makes prototyping more of an investment.
 
 
